traduce head to spanish

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,26 +5,26 @@ const { HeadData } = Astro.props;
 const { title, description, ogTitle, ogDescription, ogURL, ogImage } = HeadData;
 ---
 
-<html lang="en" class="scroll-smooth">
+<html lang="es" class="scroll-smooth">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
 
-    <title>Francesco Alterio | Portfolio</title>
+    <title>Francesco Alterio | Portafolio</title>
     <meta
       name="description"
-      content="All projects and skills of Francesco Alterio | Portfolio"
+      content="Todos los proyectos y habilidades de Francesco Alterio | Portafolio"
     />
-    <meta property="og:title" content="Francesco Alterio | Portfolio" />
+    <meta property="og:title" content="Francesco Alterio | Portafolio" />
     <meta
       property="og:description"
-      content="All projects and skills of Francesco Alterio"
+      content="Todos los proyectos y habilidades de Francesco Alterio"
     />
-    <meta property="og:url" content="https://francescoalterio.tech/" />
+    <meta property="og:url" content="https://francescoalterio.com/" />
     <meta
       property="og:image"
-      content="https://francescoalterio.tech/presentation.png"
+      content="https://francescoalterio.com/presentation.png"
     />
     <link rel="icon" href="/assets/favicon-yo.ico" />
   </head>
