--- a/src/pages/projects/[language].astro
+++ b/src/pages/projects/[language].astro
@@ -26,11 +26,11 @@ const language = Astro.params.language;
 
 <BaseLayout
   HeadData={{
-    title: "Francesco Alterio | Projects | Portfolio",
-    description: "All projects of Francesco Alterio | Portfolio",
-    ogTitle: "Francesco Alterio | Projects | Portfolio",
-    ogDescription: "All projects of Francesco Alterio",
-    ogURL: "https://francescoalterio.tech/",
+    title: "Francesco Alterio | Projects | Portafolio",
+    description: "Todos los proyectos de Francesco Alterio | Portafolio",
+    ogTitle: "Francesco Alterio | Projects | Portafolio",
+    ogDescription: "Todos los proyectos de Francesco Alterio",
+    ogURL: "https://francescoalterio.com/",
     ogImage: "https://francescoalterio.tech/presentation.png",
   }}
 >
@@ -56,7 +56,7 @@ const language = Astro.params.language;
     class="bg-customGray-200 flex flex-col px-6 sm:px-12 md:px-16 max-w-screen-xl mx-auto gap-16 sm:pb-6 md:pb-10 pt-10 md:pt-20"
   >
     <h1 class="text-white text-2xl sm:text-3xl md:text-4xl">
-      {names[language]} Projects
+      {names[language]} Proyectos
     </h1>
   </header>
   <main>
