--- a/src/pages/projects/[project].astro
+++ b/src/pages/projects/[project].astro
@@ -39,11 +39,11 @@ const {
 
 <BaseLayout
   HeadData={{
-    title: `Francesco Alterio | ${name} | Portfolio`,
+    title: `Francesco Alterio | ${name} | Portafolio`,
     description: description.slice(0, 10) + "...",
-    ogTitle: `Francesco Alterio | ${name} | Portfolio`,
+    ogTitle: `Francesco Alterio | ${name} | Portafolio`,
     ogDescription: description.slice(0, 10) + "...",
-    ogURL: "https://francescoalterio.tech/",
+    ogURL: "https://francescoalterio.com/",
     ogImage: `/assets/projects/${fileName}`,
   }}
 >
