Remove primaryLight in primary anchor

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -164,7 +164,7 @@ const allSkills = getAllSkillsInOneArray();
           Mis Proyectos Favoritos
         </h2>
         <div class="hidden md:block">
-          <PrimaryAnchor bgColor="primaryLight" href="/projects/all">
+          <PrimaryAnchor bgColor="customGray-100" href="/projects/all">
             Ver Todos
           </PrimaryAnchor>
         </div>
