--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,46 +31,47 @@ const allSkills = getAllSkillsInOneArray();
   }}
 >
   <HomeNav />
-  <header class="backgroundPer">
-    <div
-      class="px-6 sm:px-12 md:px-16 flex flex-col lg:flex-row items-center pt-20 max-w-screen-xl mx-auto"
-    >
-      <div
-        class="flex flex-col gap-5 flex-1 items-center text-center lg:items-start lg:text-start"
-      >
-        <h1
-          class="text-[2.5rem] sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl font-bold"
-        >
-          Hola, mi nombre es Francesco Alterio.
-        </h1>
-        <div class="h-2 w-16 bg-primaryLight"></div>
-        <p
-          class="text-gray-300 text-base sm:text-lg md:text-xl lg:text-lg xl:text-xl 2xl:text-2xl"
-        >
-          Soy un desarrollador Fullstack actualmente radicado en Cumaná,
-          Venezuela.
-        </p>
-        <div class="flex gap-3">
-          <RoundedAnchor href="">
-            <Icon name="mdi:github" class="w-7 h-7 inline-block text-white" />
-          </RoundedAncho>
-          <RoundedAnchor href="">
-            <Icon name="mdi:linkedin" class="w-7 h-7 inline-block text-white" />
-          </RoundedAncho>
-          <RoundedAnchor href="">
-            <Icon name="mdi:twitter" class="w-7 h-7 inline-block text-white" />
-          </RoundedAncho>
-        </div>
-      </div>
-      <img
-        src="/assets/presentation.webp"
-        alt=""
-        class="lg:w-[25rem] xl:w-[32rem] 2xl:w-[38rem]"
-        loading="eager"
-      />
-    </div>
-  </header>
+  
   <main class="">
+    <section class="backgroundPer">
+      <div
+        class="px-6 sm:px-12 md:px-16 flex flex-col lg:flex-row items-center pt-20 max-w-screen-xl mx-auto"
+      >
+        <div
+          class="flex flex-col gap-5 flex-1 items-center text-center lg:items-start lg:text-start"
+        >
+          <h1
+            class="text-[2.5rem] sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl font-bold"
+          >
+            Hola, mi nombre es Francesco Alterio.
+          </h1>
+          <div class="h-2 w-16 bg-primaryLight"></div>
+          <p
+            class="text-gray-300 text-base sm:text-lg md:text-xl lg:text-lg xl:text-xl 2xl:text-2xl"
+          >
+            Soy un desarrollador Fullstack actualmente radicado en Cumaná,
+            Venezuela.
+          </p>
+          <div class="flex gap-3">
+            <RoundedAnchor href="">
+              <Icon name="mdi:github" class="w-7 h-7 inline-block text-white" />
+            </RoundedAncho>
+            <RoundedAnchor href="">
+              <Icon name="mdi:linkedin" class="w-7 h-7 inline-block text-white" />
+            </RoundedAncho>
+            <RoundedAnchor href="">
+              <Icon name="mdi:twitter" class="w-7 h-7 inline-block text-white" />
+            </RoundedAncho>
+          </div>
+        </div>
+        <img
+          src="/assets/presentation.webp"
+          alt=""
+          class="lg:w-[25rem] xl:w-[32rem] 2xl:w-[38rem]"
+          loading="eager"
+        />
+      </div>
+    </section>
     <Section
       background="dark"
       className=" pt-10 sm:pt-12 md:pt-16 lg:pt-36 flex gap-12 lg:gap-20 xl:gap-32 2xl:gap-48 pb-[28rem] sm:pb-[34rem] md:pb-56 flex-col lg:flex-row"
