--- a/src/pages/projects/[project].astro
+++ b/src/pages/projects/[project].astro
@@ -10,12 +10,15 @@ import BorderedAnchor from "../../components/BorderedAnchor.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import NavLayout from "../../layouts/NavLayout.astro";
 import LogoName from "../../components/LogoName.astro";
+import { capitalizeText } from "../../utils/capitalizeText";
+import { textToKebabCase } from "../../utils/textToKebabCase";
+import ReadmeOfRepo from "../../components/ReadmeOfRepo.tsx";
 
 export function getStaticPaths() {
-  const toReturn = projects.map(({ id }) => {
+  const toReturn = projects.map(({ name }) => {
     return {
       params: {
-        project: id,
+        project: textToKebabCase(name),
       },
     };
   });
@@ -23,7 +26,7 @@ export function getStaticPaths() {
   return toReturn;
 }
 
-const { project: projectID } = Astro.params;
+const { project: projectName } = Astro.params;
 
 const {
   name,
@@ -34,7 +37,7 @@ const {
   preview,
   repository,
   technologies,
-} = projects.find((x) => Number(projectID) === x.id) as Project;
+} = projects.find((x) => projectName === textToKebabCase(x.name)) as Project;
 ---
 
 <BaseLayout
@@ -46,75 +49,78 @@ const {
     ogURL: "https://francescoalterio.com/",
     ogImage: `/assets/projects/${fileName}`,
   }}
+  className=" bg-customGray-300"
 >
-  <NavLayout>
+  <NavLayout HeaderClassName="bg-customGray-300">
     <LogoName />
   </NavLayout>
-  <div
-    class="px-6 sm:px-12 md:px-16 flex max-w-screen-xl mx-auto gap-10 mt-10 relative flex-col lg:flex-row"
+  <main
+    class="px-6 sm:px-12 md:px-16 flex flex-col max-w-screen-xl mx-auto mt-10"
   >
-    <div class="flex-1">
-      <Image
-        src={`/assets/projects/${fileName}`}
-        width={1920}
-        height={1080}
-        sizes="1920px"
-        alt={alt}
-        class="lg:sticky lg:top-6"
-      />
-    </div>
+    <div class="flex relative flex-col lg:flex-row gap-4 lg:gap-2">
+      <picture class="flex-1 bg-customGray-200 p-4 rounded-lg">
+        <Image
+          src={`/assets/projects/${fileName}`}
+          width={1920}
+          height={1080}
+          sizes="1920px"
+          alt={alt}
+          class="lg:sticky lg:top-6"
+        />
+      </picture>
+      <section
+        class="flex flex-col justify-between text-white bg-customGray-200 flex-1 p-4 rounded-lg"
+      >
+        <div class="flex flex-col gap-4">
+          <h1 class="text-4xl sm:text-4xl text-primaryLight font-semibold">
+            {name}
+          </h1>
+          <div class="flex">
+            <RolPill bgColor={projectTypes[projectType.toLowerCase()].color}>
+              <Icon
+                name={projectTypes[projectType.toLowerCase()].icon}
+                class="w-5"
+              />
+              {capitalizeText(projectTypes[projectType.toLowerCase()].es)}
+            </RolPill>
+          </div>
 
-    <main class="text-white flex-1 flex flex-col gap-8">
-      <h1 class="text-4xl sm:text-5xl text-primaryLight font-semibold">
-        {name}
-      </h1>
-      <section class="flex flex-col gap-8 pb-8">
-        <div class="flex">
-          <RolPill bgColor={projectTypes[projectType.toLowerCase()].color}>
-            <Icon
-              name={projectTypes[projectType.toLowerCase()].icon}
-              class="w-5"
-            />
-            {projectType}
-          </RolPill>
+          <div class="flex gap-2 w-full flex-wrap">
+            {
+              technologies.map((x) => (
+                <div class=" bg-customGray-100 whitespace-nowrap px-3 py-1 rounded-sm text-xs">
+                  {x}
+                </div>
+              ))
+            }
+          </div>
         </div>
-        <p class="text-gray-400 text-sm">{description}</p>
-
-        <div class="flex gap-2 w-full flex-wrap">
-          {
-            technologies.map((x) => (
-              <div class=" bg-customGray-100 whitespace-nowrap px-3 py-1 rounded-sm text-xs">
-                {x}
-              </div>
-            ))
-          }
-        </div>
-        {
-          preview && (
-            <div class="flex gap-5 flex-col">
-              {preview?.map((x) => (
-                <BorderedAnchor href={x.url} isFull blank>
-                  {x.name}
-                </BorderedAnchor>
-              ))}
-            </div>
-          )
-        }
-        <div class="flex gap-5 flex-col">
-          {
-            repository.map((x) => (
-              <a
-                href={x.url}
-                target="_blank"
-                class="px-4 py-2  text-white flex rounded-md border border-white items-center gap-2 transition-all hover:bg-opacity-10 hover:bg-white w-full justify-center"
-              >
-                <Icon name="mdi:github" class="w-7" />
-                {x.name}
-              </a>
-            ))
-          }
+        <div class="flex gap-2 flex-col mt-4">
+          <BorderedAnchor href={preview.url} isFull blank>
+            {preview.name}
+          </BorderedAnchor>
+          <a
+            href={repository.url}
+            target="_blank"
+            class="px-4 py-2 text-white flex rounded-md border border-white items-center gap-2 transition-all hover:bg-opacity-10 hover:bg-white w-full justify-center"
+          >
+            <Icon name="mdi:github" class="w-7" />
+            {repository.name}
+          </a>
         </div>
       </section>
-    </main>
-  </div>
+    </div>
+    <div class="flex relative flex-col-reverse lg:flex-row gap-4 lg:gap-2 mt-4">
+      <section class="flex-1 bg-customGray-200 p-2 rounded-lg">
+        <h2 class="text-2xl">README</h2>
+        <ReadmeOfRepo client:load repositoryURL={repository.url} />
+      </section>
+      <section
+        class="flex-1 bg-customGray-200 p-2 rounded-lg lg:min-h-56 flex flex-col gap-4"
+      >
+        <h2 class="text-2xl">Descripción</h2>
+        <p class="text-gray-400 text-sm">{description}</p>
+      </section>
+    </div>
+  </main>
 </BaseLayout>
