--- a/src/pages/projects/[project].astro
+++ b/src/pages/projects/[project].astro
@@ -110,7 +110,9 @@ const {
         </div>
       </section>
     </div>
-    <div class="flex relative flex-col-reverse lg:flex-row gap-4 lg:gap-2 mt-4">
+    <div
+      class="flex relative flex-col-reverse lg:flex-row gap-4 lg:gap-2 mt-4 lg:mt-2"
+    >
       <section class="flex-1 bg-customGray-200 p-2 rounded-lg">
         <h2 class="text-2xl">README</h2>
         <ReadmeOfRepo client:load repositoryURL={repository.url} />
