--- a/src/pages/projects/[project].astro
+++ b/src/pages/projects/[project].astro
@@ -75,9 +75,15 @@ const projectSkills = allSkills.filter(({ name }) =>
           />
           {capitalizeText(projectTypes[projectType.toLowerCase()].es)}
         </RolPill>
-        <h1 class="text-5xl font-bold">{name}</h1>
-        <p class="text-gray-400 text-sm">{description}</p>
-        <div class="flex items-center gap-2">
+        <h1 class="text-center w-full lg:text-start text-5xl font-bold">
+          {name}
+        </h1>
+        <p class="text-center lg:text-start text-gray-400 text-sm">
+          {description}
+        </p>
+        <div
+          class="w-full justify-center lg:justify-start flex items-center gap-2"
+        >
           {
             preview && (
               <BorderedAnchor href={preview.url}>Ver demo</BorderedAnchor>
@@ -132,8 +138,12 @@ const projectSkills = allSkills.filter(({ name }) =>
       className="flex flex-col lg:flex-row py-16 gap-10"
     >
       <div class="flex-1 flex flex-col gap-4">
-        <h2 class="text-4xl font-bold">README del Proyecto</h2>
-        <p class="text-gray-400 text-sm">
+        <h2
+          class="text-center lg:text-start text-4xl font-bold text-2xl sm:text-3xl md:text-4xl my-5 font-bold"
+        >
+          README del Proyecto
+        </h2>
+        <p class="text-center lg:text-start text-gray-400 text-sm">
           Explore el archivo README del proyecto, que proporciona información
           detallada sobre las funciones, el uso y las instrucciones de
           configuración. Aprenda cómo integrar rápidamente estos componentes de
