fix item position in project page

--- a/src/pages/projects/[project].astro
+++ b/src/pages/projects/[project].astro
@@ -67,7 +67,7 @@ const projectSkills = allSkills.filter(({ name }) =>
       background="light"
       className="flex flex-col lg:flex-row items-center gap-10 py-10"
     >
-      <div class="flex flex-col items-start flex-1 gap-4">
+      <div class="flex flex-col items-center lg:items-start flex-1 gap-4">
         <RolPill bgColor={projectTypes[projectType.toLowerCase()].color}>
           <Icon
             name={projectTypes[projectType.toLowerCase()].icon}
