--- a/src/components/Skill.astro
+++ b/src/components/Skill.astro
@@ -6,7 +6,7 @@ import type {
   technologyType,
   technologyTypeSpanish,
 } from "../types";
-import RolPill from "./RolPill.astro";
+import RolPill from "./RolPill.tsx";
 import technologyTypes from "../../db/technologyTypes.json";
 import { capitalizeText } from "../utils/capitalizeText";
 
