--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,10 +21,11 @@ const allSkills = getAllSkillsInOneArray();
 
 <BaseLayout
   HeadData={{
-    title: "Francesco Alterio | Portfolio",
-    description: "All projects and skills of Francesco Alterio | Portfolio",
-    ogTitle: "Francesco Alterio | Portfolio",
-    ogDescription: "All projects and skills of Francesco Alterio",
+    title: "Francesco Alterio | Portafolio",
+    description:
+      "Todos los proyectos y habilidades de Francesco Alterio | Portafolio",
+    ogTitle: "Francesco Alterio | Portafolio",
+    ogDescription: "Todos los proyectos y habilidades de Francesco Alterio",
     ogURL: "https://francescoalterio.tech/",
     ogImage: "https://francescoalterio.tech/presentation.png",
   }}
