--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import { Icon } from "astro-icon";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import projects from "../../db/projects.json";
+import academies from "../../db/academies.json";
 
 import PrimaryAnchor from "../components/PrimaryAnchor.astro";
 import { getAllSkillsInOneArray } from "../utils/getAllSkillsInOneArray";
@@ -15,6 +16,7 @@ import Footer from "../components/Footer.astro";
 import CourseList from "../components/CourseList.astro";
 import RoundedAnchor from "../components/RoundedAnchor.astro";
 import ProjectCard from "../components/ProjectCard.tsx";
+import Academy from "../components/Academy.astro";
 
 const allSkills = getAllSkillsInOneArray();
 ---
@@ -209,6 +211,22 @@ const allSkills = getAllSkillsInOneArray();
               />
             )
           )
+        }
+      </div>
+    </Section>
+    <Section
+      background="light"
+      className="py-10 flex flex-col gap-10 items-center"
+      id="skills"
+    >
+      <h2 class="text-2xl sm:text-3xl md:text-4xl my-5 text-center">
+        Academias y Plataformas Educativas
+      </h2>
+      <div class="flex flex-wrap gap-10 justify-center">
+        {
+          academies.map(({ name, fileName, url }) => (
+            <Academy name={name} fileName={fileName} url={url} />
+          ))
         }
       </div>
     </Section>
